[gd_scene load_steps=2 format=3 uid="uid://cj0cqvsx4ik42"]

[ext_resource type="Script" uid="uid://cfsh717mn2ke4" path="res://scripts/main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 600.0
color = Color(0.941176, 0.941176, 0.941176, 1)

[node name="HBC" type="HBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 990.0
offset_bottom = 50.0

[node name="Label" type="Label" parent="HBC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Corts:"

[node name="CortSpinBox" type="SpinBox" parent="HBC"]
layout_mode = 2
theme_override_colors/up_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_icon_modulate = Color(0, 0, 0, 1)
min_value = 1.0
max_value = 4.0
value = 1.0

[node name="SPC1" type="ColorRect" parent="HBC"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0.941176, 0.941176, 0.941176, 0)

[node name="Label2" type="Label" parent="HBC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Players:"

[node name="PlayerSpinBox" type="SpinBox" parent="HBC"]
layout_mode = 2
theme_override_colors/up_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_icon_modulate = Color(0, 0, 0, 1)
min_value = 5.0
max_value = 20.0
value = 5.0

[node name="SPC2" type="ColorRect" parent="HBC"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0.941176, 0.941176, 0.941176, 0)

[node name="Label3" type="Label" parent="HBC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Rounds:"

[node name="RoundsSpinBox" type="SpinBox" parent="HBC"]
layout_mode = 2
theme_override_colors/up_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_icon_modulate = Color(0, 0, 0, 1)
min_value = 1.0
max_value = 12.0
value = 5.0

[node name="SPC5" type="ColorRect" parent="HBC"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0.941176, 0.941176, 0.941176, 0)

[node name="OrderButton" type="Button" parent="HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Desc"

[node name="SPC3" type="ColorRect" parent="HBC"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0.941176, 0.941176, 0.941176, 0)

[node name="MakeButton" type="Button" parent="HBC"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Make Match"

[node name="SPC4" type="ColorRect" parent="HBC"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0.941176, 0.941176, 0.941176, 0)

[node name="PDFButton" type="Button" parent="HBC"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "PDF"

[node name="Schedule" type="TextEdit" parent="."]
offset_left = 10.0
offset_top = 60.0
offset_right = 720.0
offset_bottom = 590.0
theme_override_colors/background_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = " 1: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 2: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 3: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 4: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 5: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 6: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 7: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 8: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
 9: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |
10: | 1 2 : 3 4 | 5 6 : 7 8 | 9 10 : 11 12 | R: None |"

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 730.0
offset_top = 60.0
offset_right = 990.0
offset_bottom = 590.0
current_tab = 1

[node name="PairCounts" type="TextEdit" parent="TabContainer"]
visible = false
layout_mode = 2
text = " 1: 0 0 0 0 0 0 0 0 0 0 0 0
 2: 0 0 0 0 0 0 0 0 0 0 0 0
 3: 0 0 0 0 0 0 0 0 0 0 0 0
 4: 0 0 0 0 0 0 0 0 0 0 0 0
 5: 0 0 0 0 0 0 0 0 0 0 0 0
 6: 0 0 0 0 0 0 0 0 0 0 0 0
 7: 0 0 0 0 0 0 0 0 0 0 0 0
 8: 0 0 0 0 0 0 0 0 0 0 0 0
 9: 0 0 0 0 0 0 0 0 0 0 0 0
10: 0 0 0 0 0 0 0 0 0 0 0 0
11: 0 0 0 0 0 0 0 0 0 0 0 0
12: 0 0 0 0 0 0 0 0 0 0 0 0"
metadata/_tab_index = 0

[node name="OppoCounts" type="TextEdit" parent="TabContainer"]
layout_mode = 2
text = " 1: 0 3 3 3 0 0 0 0 0 0 0 0
 2: 0 0 0 0 0 0 0 0 0 0 0 0
 3: 0 0 0 0 0 0 0 0 0 0 0 0
 4: 0 0 0 0 0 0 0 0 0 0 0 0
 5: 0 0 0 0 0 0 0 0 0 0 0 0
 6: 0 0 0 0 0 0 0 0 0 0 0 0
 7: 0 0 0 0 0 0 0 0 0 0 0 0
 8: 0 0 0 0 0 0 0 0 0 0 0 0
 9: 0 0 0 0 0 0 0 0 0 0 0 0
10: 0 0 0 0 0 0 0 0 0 0 0 0
11: 0 0 0 0 0 0 0 0 0 0 0 0
12: 0 0 0 0 0 0 0 0 0 0 0 0"
metadata/_tab_index = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[connection signal="value_changed" from="HBC/CortSpinBox" to="." method="_on_cort_spin_box_value_changed"]
[connection signal="value_changed" from="HBC/PlayerSpinBox" to="." method="_on_player_spin_box_value_changed"]
[connection signal="value_changed" from="HBC/RoundsSpinBox" to="." method="_on_rounds_spin_box_value_changed"]
[connection signal="toggled" from="HBC/OrderButton" to="." method="_on_order_button_toggled"]
[connection signal="pressed" from="HBC/MakeButton" to="." method="_on_make_button_pressed"]
[connection signal="pressed" from="HBC/PDFButton" to="." method="_on_pdf_button_pressed"]
